--- a/MÓDULO-1/lección-01-mi-primera-página-web/index.html
+++ b/MÓDULO-1/lección-01-mi-primera-página-web/index.html
@@ -38,5 +38,7 @@
 
     <p class="parrafo amparo">Hola hola probando el selector de clase párrafo y amparo</p>
 
+    <p>&copy; Promo 51</p>
+
 </body>
 </html>
