--- a/MÓDULO-1/lección-01-mi-primera-página-web/index.html
+++ b/MÓDULO-1/lección-01-mi-primera-página-web/index.html
@@ -40,5 +40,7 @@
 
     <p>&copy; Promo 51</p>
 
+    <p>hola hola estoy probando si tengo la contraseña guardada en la terminal</p>
+
 </body>
 </html>
