--- a/MÓDULO-1/lección-02-modelo-de-caja/index.html
+++ b/MÓDULO-1/lección-02-modelo-de-caja/index.html
@@ -28,7 +28,7 @@
             <p>Este es un ejemplo para explicar el modelo de caja</p>
         </section>
 
-    <section>
+    <section class="caja4">
         <h2>Modelo de caja 4</h2>
         <p>Este es un ejemplo para explicar el modelo de caja</p>
     </section>
@@ -39,6 +39,16 @@
         <h5>Probando la regla de la herencia, le aplicamos una clase a section y, por herencia, se va a aplicar a h3, h4 y h5, ya que van incluidos dentro de section.</h5>
         <p>Este párrafo también aplica el estilo del selector de párrafo, puesto que aunque lleva un selector de clase, en el estilo de este selector no se especifica nada respecto al párrafo</p>
         </h3>
+    </section>
+
+    <section class="caja5">
+        <h2>Modelo de caja 5</h2>
+        <p>Este es un ejemplo para explicar el modelo de caja</p>
+    </section>
+
+    <section class="caja6">
+        <h2>Modelo de caja 6</h2>
+        <p>Este es un ejemplo para explicar el modelo de caja</p>
     </section>
 
     </main>
